// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Row coloring Batch Row coloring by each row 1`] = `
"┌───────┬───────────────────┬───────┐
│[37m [0m[01mindex[0m │[37m [0m[01m             text[0m │[37m [0m[01mvalue[0m │
├───────┼───────────────────┼───────┤
│[37m [0m[32m    3[0m │[37m [0m[32mgreen color text1[0m │[37m [0m[32m  100[0m │
│[37m [0m[32m    4[0m │[37m [0m[32mgreen color text2[0m │[37m [0m[32m  300[0m │
└───────┴───────────────────┴───────┘"
`;

exports[`Testing Row coloring Batch Row coloring is working 1`] = `
"┌───────┬───────────────────┬───────┐
│[37m [0m[01mindex[0m │[37m [0m[01m             text[0m │[37m [0m[01mvalue[0m │
├───────┼───────────────────┼───────┤
│[37m [0m[32m    3[0m │[37m [0m[32mgreen color text1[0m │[37m [0m[32m  100[0m │
│[37m [0m[32m    4[0m │[37m [0m[32mgreen color text2[0m │[37m [0m[32m  300[0m │
└───────┴───────────────────┴───────┘"
`;

exports[`Testing Row coloring Batch Row default coloring is working 1`] = `
"┌───────┬───────────────────┬───────┐
│[37m [0m[01mindex[0m │[37m [0m[01m             text[0m │[37m [0m[01mvalue[0m │
├───────┼───────────────────┼───────┤
│[37m [0m[37m    3[0m │[37m [0m[37mgreen color text1[0m │[37m [0m[37m  100[0m │
│[37m [0m[37m    4[0m │[37m [0m[37mgreen color text2[0m │[37m [0m[37m  300[0m │
└───────┴───────────────────┴───────┘"
`;
